--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Pagina fan de los Spurs como personal">
+    <meta name="keywords" content="NBA, Spurs, Basketball, Fanpage, Ginobili, Duncan, Parker, Popovich">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -12,94 +15,128 @@
     <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
     </script>
-    <title>Pagina Prototipo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <title>FanPage- Spurs -NoOffical</title>
 </head>
 <body class="body-index">
-  <header>
-<!-------------------------Inicio del Nav bar responsive------------------->
+<!--Header-->
+  <header class="header">
     <nav class="nav">
-      <div class="nav__container">
-        <h1 class= "nav__logo">SAN ANTONIO SPURS</h1>
-        <label for="menu" class="nav__label">
-          <i class="fa-solid fa-bars"></i>
-        </label>
-          <input type="checkbox" id="menu" class="nav__input">
-          <ul class="nav__menu">
-            <li>
-              <a href="index.html">HOME</a>
-            </li>
-            <li>
-              <a href="pages/bibliografia.html">BIBLIOGRAFIA</a>
-            </li>
-            <li>
-              <a href="pages/fanshots.html">FAN-SHOTS</a>
-            </li>
-            <li>
-              <a href="pages/fanposts.html">FAN-POSTS</a>
-            </li>
-            <li>
-              <a href="pages/productos.html">PRODUCTOS</a>
-            </li>
-            <li>
-              <a href="pages/contacto.html">CONTACTO</a>
-            </li>
+      <a href="index.html">
+        <h1>San Antonio Spurs</h1>
+      </a>
+        <div class="nav-links">
+          <input type="checkbox" class="toogle-menu">
+          <div class="hamburguesa"></div>
+          <ul class="mb-0 menu">
+            <li><a href="./pages/bibliografia.html">Bibliografia</a></li>
+            <li><a href="./pages/fanposts.html">FanPost</a></li>
+            <li><a href="./pages/fanshots.html">FanShot</a></li>
+            <li><a href="./pages/productos.html">Productos</a></li>
+            <li><a href="./pages/contacto.html">Contacto</li></a>
           </ul>
-      </div>
-<!-----------------Fin del Nav bar responsive---------------------------->
-<!----------------------------------------------------------------------->
-<!--------------------------Nav bar desktop------------------------------>
-      <div class="nav__container_desktop">
-        <h1 class= "nav__logo_desktop">
-          <a href="index.html">SAN ANTONIO SPURS</a></h1>
-          <ul class="nav__menu_desktop mb-0">
-            <li><a href="pages/bibliografia.html">BIBLIOGRAFIA</a>
-            </li>
-            <li><a href="pages/fanshots.html">FAN-SHOTS</a>
-            </li>
-            <li><a href="pages/fanposts.html">FAN-POSTS</a>
-            </li>
-            <li><a href="pages/productos.html">PRODUCTOS</a>
-            </li>
-            <li><a href="pages/contacto.html">CONTACTO</a>
-            </li>
-          </ul>
-      </div>
+        </div>
     </nav>
-  </header>
-<!---------------------------Fin del Nav bar desktop------------------> 
-<!-------------------------------------------------------------------->
-<!------------------------Inicio del contenido del index--------------> 
-  <main class="main-index">
-    <section class="seccion-index-0">
+    <div class="caja-texto">
       <h2>¡Bienvenidos a mi pagina fan dirigida a mi equipo favorito de basquet!</h2>
-        <p>
-          Lo que estan viendo es una "pre-alfa" de un proyecto de Desarrollo Web para CoderHouse. 
-        </p>
-    </section>
+      <p>
+        Lo que estan viendo es un proyecto de Desarrollo Web para CoderHouse.
+        <figure>  
+          <img src="./assets/coderHouse-logo.jpg" alt="logo de coderhouse"> 
+          <figcaption>  
+            <a href="https://www.coderhouse.com/" class="coder">¡Visitalos pinchando aqui!</a>
+          </figcaption>  
+       </figure>      
+      </p>    
+    </div>
+  </header>
+<!--Fin del header Header-->
+<!--Inicion del Main-->
+  <main class="main">
     <section class="seccion-index-1">
-      <h2>Sobre mi y el Basquet</h2>
-        <p>
-          Un poco de contexto. Mi nombre es Manuel, mi relacion el basquet empezo en la secundaria, mas exacto en 2do año. De ahi en adelante me ah ayudado bastante tanto en hacer amigos como cuidarme fisicamente. A pesar de ser bajo de estatura eh podido destacar entre mis amigos por ser un buen tirador, cosa que se valora bastante en estos tiempos modernos de la nba. 
-        </p>
-        <p>
-          Nunca me pierdo o al menos trato de poder ver todos los partidos y movimiento que hace mi equipo.
-        </p>
+      <h2>Sobre mi y el Basquet</h2> 
+          <p class="parrafo_1">
+            Un poco de contexto. Mi nombre es Manuel, mi relacion con el basquet empezo en la secundaria, mas exacto en 2do año. De ahi en adelante me ah ayudado bastante tanto en hacer amigos como cuidarme fisicamente. 
+          </p>
+            <span>
+              <figure class="figure_carlton">
+                <img src="./assets/primerIntento.gif" alt="Gif de basquet">
+                <figcaption class="figcaption_carlton">  
+                  <p>Una representacion "dramatica" de mis primeros tiros al aro</p>  
+                </figcaption> 
+              </figure>
+            </span>
+          <p class="parrafo_1">
+            A pesar de ser bajo de estatura eh podido destacar entre mis amigos por ser un buen tirador, cosa que se valora bastante en estos tiempos modernos de la nba donde por mas que uno sea alto, sin la capacidad de lanzar un tiro a larga distancia uno no puede prosperar. 
+          </p>
+          <p class="parrafo_1">
+            Nunca me pierdo o al menos eso trato, de poder ver todos los partidos y movimiento que hace mi equipo.
+          </p>
     </section>
     <section class="seccion-index-2">
       <h2>Equipo/jugador favorito</h2>
-        <p>
-          Es normal que cada persona que mira basquet como en cualquier otro deporte se decante por elegir a un equipo u jugador en cual uno se insipire y cienta en su interior las ganas de apoyarlo. Aunque a veces uno termina gritando a la pantalla de TV, Computadora o Celular.
+        <p class="parrafo_2">
+          Es normal que cada persona que mira basquet como en cualquier otro deporte se decante por elegir a un equipo u jugador en cual uno se
+        </p class="parrafo_2"> 
+        <span>
+            <figure class="figure_pasman">
+            <img src="./assets/TanoFrustrado.gif" alt="Gif de alguien gritando al tv">
+            <figcaption class="figcaption_pasman">  
+              <p>Una representacion "dramatica" al ver a mi equipo perder</p>  
+          </figcaption>
+          </figure>
+        </span> 
+        <p class="parrafo_2">
+        insipire y cienta en su interior las ganas de apoyarlo. Aunque a veces uno termina gritando a la pantalla de TV, Computadora o Celular.
         </p>
-        <p>
-          El punto es que para mi son ambos. Como no nombrar al probablemente el mejor jugador de basquet argentino de todos los tiempos, Emmanuel David Ginobili. Un estandarte a nivel internacional y el equipo donde se la paso jugando toda su carrera, los San Antonios Spurs. 
+        <p class="parrafo_2">
+          El punto es que para mi son ambos. Como no nombrar al probablemente el mejor jugador de basquet argentino de todos los tiempos, Emmanuel David Ginobili. Un estandarte a nivel internacional y el equipo donde se la paso jugando toda su carrera, los San Antonio Spurs. 
         </p> 
-        <p>
+        <div class="manu_moment">
+        <figure class="figure_harden">
+          <img src="./assets/manuBlockharden.gif" alt="Gif de basquet">
+          <figcaption class="figcaption_harden">  
+            <p>Como fue....</p>  
+          </figcaption>
+        </figure>
+        <figure class="figure_jordan">
+          <img src="./assets/ManuBlockJordan.jpg" alt="Gif de basquet">
+          <figcaption class="figcaption_jordan">  
+              <p>Como varios lo recordamos....</p>  
+          </figcaption>
+        </figure>
+        </div>
+        <p class="parrafo_2">
           Ha sido un golpe de suerte para mi que ambos esten unido. Siempre estare agradecido por llenar un vacio con algo que realmente es hermoso.
         </p>
+          <figure class="despedida">
+            <img src="./assets/CoyoteBodyGuard.gif" alt="Gif de basquet">
+            <figcaption class="figcaption_despedida">  
+              <p>¡Gracias por leer!</p>  
+          </figcaption>
+          </figure>
     </section>
+    <section class="seccion-index-3">
+      <h3>Otras razones</h3>
+        <p class="parrafo_3 mas">
+          Tambien mencionar que el objetivo de la pagina es demostrar mis habilidades con HTML y CSS para así conseguir entrar a este mundo de manera profesional 
+        </p>
+        <div class="mt-3 mb-3">
+          <div class="caja uno"></div>
+          <div class="caja dos"></div>
+          <div class="caja tres"></div>
+        </div>
+        <div class="pelota-caja">
+          <img src="./assets/pelota.png" class="pelota" alt="Imagen de una pelota de basquet">
+        </div>
+      <div class="mt-3 mb-3">
+        <div class="caja uno"></div>
+        <div class="caja dos"></div>
+        <div class="caja tres"></div>
+      </div>
+    </section> 
     <section class="contenedor-podcast-padre">
       <h2 class="cabeza-podcast">Listas de PodCasts para pasar el tiempo</h2>
         <div class="iframe-0">
@@ -121,17 +158,8 @@
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3qLyGwz038O7KiiEpkdlGx?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
         </div>
     </section>
-    <section class="seccion-index-3">
-      <h2>Otras razones</h2>
-        <p>
-          Tambien mencionar que el objectivo de la pagina es demostrar mi habilidades con HTML y CSS. 
-        </p>
-        <div>
-          <img src="./assets/Net+Pelota.jpg" alt="Imagen de una pelota de basquet sobre una netbook">
-        </div>
-    </section> 
     <section class="seccion-index-4">
-        <h2 class="gifs">GIFS</h2>
+        <h3 class="gifs">+ Gifs</h3>
           <div class="gif-0">
             <img src="./assets/Basketgif.gif" alt="GIFs sobre el basquet">
           </div>
@@ -144,62 +172,60 @@
           <div class="gif-3">
             <img src="./assets/OtherBasket.gif" alt="GIFs sobre el basquet">
           </div>
-          <div class="gif-4">
-            <img src="./assets/PelotadeBasquetSpalding-removebg-preview.png" alt="Pelota girando - No es un gif">
-          </div>
     </section>
   </main>
-<!-------------------------Fin del contenido del Index---------------------->
-<!-------------------------------------------------------------------------->
-<!------------------------Inicio del Footer Con Botstrap + css--------------> 
+<!--Fin del contenido del Index-->
+<!--Inicio del Footer Con Botstrap + css--> 
   <footer class="pt-3 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h5 class="mb-4">Información</h5>
+        <div class="col-md-6 col-lg-6 col-xl-3 mx-auto mt-3">
+          <h4 class="mb-4">Información</h4>
           <p class="righteous">Esta pagina se ha creado con el proposito de mostrar mis habilidades con bootstrap, espero que sea de su agrado</p>
         </div>
         <div class="footer__linea">
         </div>
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h5 class="wheat mb-4">*Proximamente*</h5>
-          <p>
+        <div class="col-md-3 col-xl-2 mx-auto mt-3">
+          <h4 class="wheat mb-4">*Proximamente*</h4>
             <a href="#" class="text-decoration-none text-white">####</a>
-          </p>
         </div>
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="wheat mb-3">Links a las otras paginas</h5>
-            <p>
-              <a href="./index.html" class="text-decoration-none righteous">HOME</a>
-            </p>
-            <p>
-              <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
-            </p>
-            <p>
-              <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
-            </p>
-            <p>
-              <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
-            </p>
-            <p>
-              <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>
-            </p>
+          <div class= "mx-auto mt-3">
+            <h4 class="wheat mb-3">Links a las otras paginas</h4>
+            <ul class="list-unstyled list-inline col-6 col-sm-4 col-lg-6  mx-auto">
+              <li class="list-inline-item p-1">
+                <a href="./index.html" class="text-decoration-none righteous">HOME</a>  
+              </li>
+              <li class="list-inline-item p-1"> 
+                <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
+              </li>
+              <li class="list-inline-item p-1">
+                <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
+              </li>
+              <li class="list-inline-item p-1">
+                <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
+              </li>
+              <li class="list-inline-item p-1">
+                <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
+              </li>
+            </ul>  
           </div>
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="mb-3">Contacto</h5>
-            <p>
-              <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
-            </p>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h4 class="mb-3">Contacto</h4>
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item p-1">
+                <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
+              </li>
+              <li class="list-inline-item p-1">
+                <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
+              </li>
+              <li class="list-inline-item p-1">
+                <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
+              </li>
+           </ul> 
             <div class="text-center text-md-right">
               <ul class="list-unstyled list-inline">
                 <li class="list-inline-item">
-                  <a href="#" class="btn-floating btn-sm text-white logos">
+                  <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-square-instagram"></i>
