--- a/pages/fanposts.html
+++ b/pages/fanposts.html
@@ -1,73 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina fan de los Spurs como personal">
+    <meta name="keywords" content="NBA, Spurs, Basketball, Fanpage, Ginobili, Duncan, Parker, Popovich">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gh3yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
     </script>
-    <title>Pagina Prototipo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
+    </script>
+    <title>FanPageSpurs - Fanposts</title>
 </head>
-<body class="body-fanposts">
-  <header>
-<!-------------------------Inicio del Nav bar responsive------------------------>
-    <nav class="nav">
-      <div class="nav__container">
-        <h1 class= "nav__logo">SAN ANTONIO SPURS</h1>
-        <label for="menu" class="nav__label">
-          <i class="fa-solid fa-bars"></i>
-        </label>
-          <input type="checkbox" id="menu" class="nav__input">
-          <ul class="nav__menu">
-            <li><a href="../index.html">HOME</a></li>
-            <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
-            <li><a href="fanshots.html">FAN-SHOTS</a></li>
-            <li><a href="fanposts.html">FAN-POSTS</a></li>
-            <li><a href="productos.html">PRODUCTOS</a></li>
-            <li><a href="contacto.html">CONTACTO</a></li>
-          </ul>
-      </div>  
-    </nav>
- <!-----------------Fin del Nav bar responsive--------------------------------->
-<!----------------------------------------------------------------------------->
-<!------------------Inicio del Nav bar desktop--------------------------------->
-    <div class="nav__container_desktop">
-      <h1 class= "nav__logo_desktop">
-        <a href="../index.html">SAN ANTONIO SPURS</a></h1>
-        <ul class="nav__menu_desktop mb-0">
-          <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
-          <li><a href="fanshots.html">FAN-SHOTS</a></li>
-          <li><a href="fanposts.html">FAN-POSTS</a></li>
-          <li><a href="productos.html">PRODUCTOS</a></li>
-          <li><a href="contacto.html">CONTACTO</a></li>
+<body>
+<!--Header-->
+<header class="header-fanposts">
+  <nav class="nav">
+    <a href="../index.html">
+      <h1>San Antonio Spurs</h1>
+    </a>
+      <div class="nav-links">
+        <input type="checkbox" class="toogle-menu">
+        <div class="hamburguesa"></div>
+        <ul class="mb-0 menu">
+          <li><a href="./bibliografia.html">Bibliografia</a></li>
+          <li><a href="./fanposts.html">FanPost</a></li>
+          <li><a href="./fanshots.html">FanShot</a></li>
+          <li><a href="./productos.html">Productos</a></li>
+          <li><a href="./Contacto">Contacto</li></a>
         </ul>
-    </div>    
-  </header>
-  <!------------------Fin del nav var desktop----------------------------------------->
-  <!---------------------------------------------------------------------------------->
-  <!------------------Inicio del contenido de fanposts-------------------------------->
+      </div>
+  </nav>
+  <section class="seccion-fanposts-0">
+    <h2>FANPOSTS</h2>
+      <p>
+        Bienvenido al foro donde se podra colocar posteo puro. Utilizen los canales correspondiente. ¡Saludos!
+      </p>
+  </section>
+</header>
+<!--Fin del header Header-->
+<!--Inicio del Nav bar desktop-->
+  <!--Inicio del contenido de fanposts-->
   <main class="main-fanposts">
-    <section class="seccion-fanposts-0">
-      <h2>FANPOSTS</h2>
-        <p>
-          Bienvenido al lugar donde se podra colocar posteo puro. Sea libre de conversar/discutir tanto del equipo de los Spurs como de otro equipos a nivel mundial
-        </p>
-    </section>
     <section class="titulo">
-      <h3>PRINCIPALES HILOS</h3>
+      <h3>Hilos Principales</h3>
+    </section>
     <section class="seccion-fanposts-1">
       <h3>MERCADO DE TRASPASOS Y AGENCIA LIBRE</h3>
         <div>
           <p>
-            COMPARTA SUS PENSAMIENTOS CON LOS ULTIMOS MOVIMIENTOS O RUMORES A NIVEL NBA COMO INTERNACIONAL.
+            Comparta sus pensamientos con los ultimos movimientos o rumores a nivel nba como internacional.
           </p>
             <div>
               <button class="boton-fanpost">
@@ -80,7 +71,7 @@
       <h3>PLANTILLAS</h3>
         <div>
             <p>
-              COMPARTA SUS ESPERANZAS COMO DESILUCIONES O FUTUROS MOVIMIENTOS CON LA LISTA ACTUAL DE LOS JUGADORES PARA LA TEMPORADA 2k22 - 2k23.
+              Comparta sus esperanzas como desilusiones o futuros movimientos con la lista actual de los jugadores para la temporada 2k22 - 2k23.
             </p>
           <div>
             <button class="boton-fanpost">
@@ -93,7 +84,7 @@
           <h3>SUMMER LEAGUE</h3>
           <div>
             <p>
-             LA LIGA DE VERANO PARA LOS SPURS EMPIEZA, COMENTE SUS OPINIONES SOBRE EL PLANTEL JOVEN PARA LA TEMPORADA 2k22-2k23 QUE SE VIENE.
+              La liga de verano para los Spurs empieza, comente sus opiniones sobre el plantel joven para la temporada 2k22-2k23 que se viene.
             </p>
             <div>
               <button class="boton-fanpost">
@@ -106,7 +97,7 @@
           <h3>EQUIPO FILIAL DE LOS SAN ANTONIO SPURS</h3>
           <div>
             <p>
-              COMPARTA SUS PENSAMIENTOS TANTOS DE LOS ROOKIES, TWO AWAYS Y JUGADORES CON CONTRATO G LEAGUE.
+              Comparta sus pensamientos tantos de los rookies, two-aways y jugadores con contrato g league.
             </p>
             <div>
               <button class="boton-fanpost">
@@ -117,77 +108,78 @@
     </section>
   </section>
   </main>
-  <!-----------------Fin del contenido de fanposts--------------------------------->
-  <!------------------------------------------------------------------------------->
- <!------------------Inicio del Nav bar desktop------------------------------------>
-  <footer class="pt-3 pb-4">
-    <div class="container text-center text-md-left">
-      <div class="row text-center text-md-left">
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h5 class="mb-4">Información</h5>
-          <p class="righteous">Esta pagina se ha creado con el proposito de mostrar mis habilidades con bootstrap, espero que sea de su agrado</p>
+  <!--Fin del contenido de fanposts-->
+ <!--Inicio del Nav bar desktop--->
+ <footer class="pt-3 pb-4">
+  <div class="container text-center text-md-left">
+    <div class="row text-center text-md-left">
+      <div class="col-md-6 col-lg-6 col-xl-3 mx-auto mt-3">
+        <h4 class="mb-4">Información</h4>
+        <p class="righteous">Esta pagina se ha creado con el proposito de mostrar mis habilidades con bootstrap, espero que sea de su agrado</p>
+      </div>
+      <div class="footer__linea">
+      </div>
+      <div class="col-md-3 col-xl-2 mx-auto mt-3">
+        <h4 class="wheat mb-4">*Proximamente*</h4>
+          <a href="#" class="text-decoration-none text-white">####</a>
+      </div>
+        <div class= "mx-auto mt-3">
+          <h4 class="wheat mb-3">Links a las otras paginas</h4>
+          <ul class="list-unstyled list-inline col-6 col-sm-4 col-lg-6  mx-auto">
+            <li class="list-inline-item p-1">
+              <a href="./index.html" class="text-decoration-none righteous">HOME</a>  
+            </li>
+            <li class="list-inline-item p-1"> 
+              <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
+            </li>
+            <li class="list-inline-item p-1">
+              <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
+            </li>
+            <li class="list-inline-item p-1">
+              <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
+            </li>
+            <li class="list-inline-item p-1">
+              <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
+            </li>
+          </ul>  
+        </div>
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h4 class="mb-3">Contacto</h4>
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item p-1">
+              <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
+            </li>
+            <li class="list-inline-item p-1">
+              <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
+            </li>
+            <li class="list-inline-item p-1">
+              <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
+            </li>
+         </ul> 
+          <div class="text-center text-md-right">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item">
+                <a href="#" class="btn-floating btn-sm text-white text-decoration-none logos">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-square-instagram"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                  <i class="fa-brands fa-discord"></i>
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
         </div>
         <div class="footer__linea">
         </div>
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h5 class="wheat mb-4">*Proximamente*</h5>
-          <p>
-            <a href="#" class="text-decoration-none text-white">####</a>
-          </p>
-        </div>
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="wheat mb-3">Links a las otras paginas</h5>
-            <p>
-              <a href="../index.html" class="text-decoration-none righteous">HOME</a>
-            </p>
-            <p>
-              <a href="./bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
-            </p>
-            <p>
-              <a href="./fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
-            </p>
-            <p>
-              <a href="./fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
-            </p>
-            <p>
-              <a href="./productos.html" class="text-decoration-none righteous">PRODUCTOS</a>
-            </p>
-          </div>
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="mb-3">Contacto</h5>
-            <p>
-              <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
-            </p>
-            <p>
-              <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
-            </p>
-            <div class="text-center text-md-right">
-              <ul class="list-unstyled list-inline">
-                <li class="list-inline-item">
-                  <a href="#" class="btn-floating btn-sm text-white logos">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-discord"></i>
-                    <i class="fa-brands fa-github"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          </div>
-          <div class="footer__linea">
-          </div>
-          <div class="col-m7 col-lg-12 mx-auto reservado">
-            <p>Derechos reservados por: <a href="#" class="text-decoration-none">Manuel Arias</a></p>
-        </div>
+        <div class="col-m7 col-lg-12 mx-auto reservado">
+          <p>Derechos reservados por: <a href="#" class="text-decoration-none">Manuel Arias</a></p>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
   <!------------------Final del footer con boostrap + Css------------------------------------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
